blocks/modal.css
.modal {
    display: flex;
    position: fixed;
    justify-content: center;
    align-items: center;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 999;
    visibility: hidden;
    opacity: 0;
    transition: visibility 0.3s, opacity 0.3s ease-in;
    overflow: auto;
  }

.modal_opened {
    visibility: visible;
    opacity: 1;
}

.modal__container {
    position: relative;
    max-width: 430px;
    width: 100%;
    min-height: 323px;
    padding: 34px 36px;
    background-color: #fff;
    margin: auto;
    border-radius: 10px;
    box-sizing: border-box
}

.modal__heading {
    color: rgba(0, 0, 0, 1);
    width: 330px;
    height: 23px;
    font-family: "Inter", Arial, Helvetica, sans-serif;
    font-size: 24px;
    font-weight: 900;
    line-height: 29px;
    text-align: left;
    text-underline-position: from-font;
    text-decoration-skip-ink: none;
    margin-top: 0;
    margin-bottom: 54px;
  }

  .modal__form {
    display: flex;
    flex-direction: column;
    gap: 29.74px;
    margin: 0;
    padding: 0;
  }
  
  .modal__label {
  }

.modal__close-button {
    border: none;
    background: transparent url(../images/Close\ Icon.svg) center no-repeat;
    cursor: pointer;
    position: absolute;
    bottom: calc(100% + 5px); /*pushing from the botton 100% then adding 5px no matter what*/
    left: calc(100% + 5px); /*pushing from the botton 100% then adding 5px no matter what*/
    width: 35px;
    height: 35px;
    background-size: contain;
    transform: rotate(90deg);
    transition: 0.3s;
    padding: 0;
    margin: 0;
}

.modal__close-button:hover {
  opacity: 0.6;
}
  
  .modal__input {
    width: 358px;
    height: 27.26px;
    font-family: "Inter", Arial, Helvetica, sans-serif;
    font-size: 14px;
    font-weight: 400;
    line-height: 16.94px;
    text-align: left;
    text-underline-position: from-font;
    text-decoration-skip-ink: none;
    border: none;
    margin-bottom: 29.74px;
    border-bottom: solid 1px rgba(0, 0, 0, 1);
  }

  .modal__input:last-of-type {
    margin-bottom: 0;
  }
  
  .modal__submit-button{
    width: 100%;
    height: 47px;
    border: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
    font-family: "Inter", Arial, Helvetica, sans-serif;
    font-size: 14px;
    font-weight: 400;
    line-height: 17px;
    text-align: center;
    text-underline-position: from-font;
    text-decoration-skip-ink: none;
    margin-top: 48px;
    margin-bottom: 10px;
    color: rgba(255, 255, 255, 1);
    background: rgba(0, 0, 0, 1);
    border: none;
    cursor: pointer;
    border-radius: 2px;
  }

  @media screen and (max-width: 480px){
    .modal__container {
      max-height: 322px;
      max-width: 282px;
      padding: 25px 22px 30px;
    }

    .modal__form {
      gap: 30px;
    }

    .modal__heading {
      font-size: 18px;
      line-height: 21.78px;
    }

    .modal__input {
      max-width: 238px;
      max-height: 27px;
    }

    .modal__submit-button {
      margin-top: 45px;
    }

    .modal__close-button{
      height: 26px;
      width: 26px;
    }
  }

  @media screen and (max-width: 321px) {
    .modal__close-button {
      left: unset;
      right: 5px;
    }
  }

